[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://Ship/mig_17.png" type="Texture" id=2]
[ext_resource path="res://Ship/Shield.gd" type="Script" id=3]
[ext_resource path="res://Ship/SHIELD.png" type="Texture" id=4]

[node name="Ship" type="KinematicBody2D" groups=[
"gravity",
"player",
]]
scale = Vector2( 2, 2 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="shootL" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="shootR" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="weL" type="Position2D" parent="."]
position = Vector2( -10, -29 )

[node name="weR" type="Position2D" parent="."]
position = Vector2( 10, -29 )

[node name="sprites" type="Node2D" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="Sprite" type="Sprite" parent="sprites"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="." groups=[
"player",
]]
visible = false
polygon = PoolVector2Array( -0.266251, -50.4056, -14, -4, -36, 24, -22.0696, 44.506, 24.0157, 44.0183, 36, 24, 14, -4 )

[node name="energy" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Shield" type="Area2D" parent="." groups=[
"player",
"shield",
]]
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shield"]
polygon = PoolVector2Array( -63, 0, -63, -17, -56, -39, -32, -53, 0, -56, 32, -52, 56, -42, 65, -22, 65, 0 )

[node name="Sprite" type="Sprite" parent="Shield"]
visible = false
position = Vector2( 1, -29 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="shootL" to="." method="_on_shootL_timeout"]
[connection signal="timeout" from="shootR" to="." method="_on_shootR_timeout"]
[connection signal="timeout" from="energy" to="." method="_1_sec_function"]
[connection signal="area_entered" from="Shield" to="Shield" method="_on_Shield_area_entered"]
[connection signal="body_entered" from="Shield" to="Shield" method="_on_Shield_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
